# unified-memory

./: .env.example  .gitignore  .gitkeep  AGENT.md  AGENT_BRIEF.md  CHRONICLE_HACKATHON_PLAN.md  CLAUDE.md  CLOUDFLARE_DEPLOY.md  DEPLOYMENT_GUIDE.md  FRONTEND_DESIGN.md  HACKATHON_PLAN.md  MNEMOSYNE_ARCHITECTURE.md  MNEMOSYNE_STRATEGIC_PLAN.md  README.md  TEAM_BRIEF.md  UnifiedMemory-Demo-Script.html  docker-compose.yml.bak.slim  package-lock.json  package.json  pitch-deck.md  pyproject.toml  requirements.txt  roadmap.md
app/: .env.production.example  next.config.js  package.json  tailwind.config.ts  wrangler.toml
app/app/: globals.css  layout.tsx  page.tsx
app/components/: Icons.tsx  Nav.tsx  (+3 more)
backend/: Dockerfile  Dockerfile.optimized  migrate_users.py  pyproject.toml  requirements.txt
contracts/: code.h  consent_nft.js  consent_nft.js.map  consent_nft.wasm  consent_nft_src.js  methods.h  package.json
data/: .gitkeep  users.json
demo/: agent.py  cognee_hackathon_demo.py  near_consent.py  reset_consent.py
docs/: COGNEE_SETUP.md
frontend/: Dockerfile  next.config.js  package-lock.json  tailwind.config.ts
frontend-test/: index.html  onboard.html  theme.js
graphify-out/: manifest.json
infra/: Caddyfile
ingestion/: cognee_bridge.py  cognee_synthesis.py  run.py  synthesis.py
tests/: conftest.py  test_auth.py  test_connectors.py  test_ingest.py  test_local_server.py  test_project_conditions.py
workers/: auth.py  cognee_local_server.py  deploy-frontend.ps1  deploy.ps1  ingest.js  local_server.py  mcp-server.js  package.json  wrangler.toml  x402-gate.js
(+53 files in other folders)
