[project]
name = "unified-memory"
version = "0.1.0"
description = "Unified memory OS for AI agents — AI Agents Berlin Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    "pinecone>=5.0.0",
    "cognee>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "openai>=1.40.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.131.0",
    "PyGithub>=2.3.0",
    "spotipy>=2.23.0",
    "praw>=7.7.1",
    "slack-sdk>=3.27.0",
    "discord.py>=2.3.2",
    "notion-client>=2.2.1",
    "requests>=2.32.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
